use rdoc formatting for yard output

--- a/yard/templates/default/context/html/specification.erb
+++ b/yard/templates/default/context/html/specification.erb
@@ -8,7 +8,7 @@
   <div class="details">
     
     <div class="docstring">
-      <%= html_markup_markdown(specification.docstring.to_s) %>
+      <%= html_markup_rdoc(specification.docstring) %>
     </div>
 
     <!-- Source Code -->
