--- a/yard/templates/default/context/html/context.erb
+++ b/yard/templates/default/context/html/context.erb
@@ -1,16 +1,11 @@
 <div class='context'>
-    <h1 class='title'>Context: <%= link_to_code_object context %></h1>
-  
-  <div style="clear: both;"></div>
-  
-  <% @row = 'odd' %>
-  
+  <h1 class='title'><%= link_to_code_object context %></h1>
+    
   <ul class='context-specifications'>
     <% context.specifications.each do |it| %>
       <% @specification = it %>
       <li class='context-specification'><%= erb :specification %></li>
       
-      <% @row = (@row == 'odd' ? 'even' : 'odd') %>
     <% end %>
   </ul>
   
@@ -22,13 +17,7 @@
     <li><%= erb :context %></li>
     
     <% @context = @context_saved %>
-    <% @row = (@row == 'odd' ? 'even' : 'odd') %>
   <% end %>
   </ul>
 
-  
-  <div class="attributes" style="display:none;">
-    <input type="hidden" name="collapsed" value="false">
-  </div>
-  
 </div>
