--- a/yard/templates/default/context/html/specification.erb
+++ b/yard/templates/default/context/html/specification.erb
@@ -1,35 +1,32 @@
 <div class="specification">
   <div class="heading <%= row %>">
     <a name="<%= specification.unique_id %>"></a>
-    <span class="predicate">it</span>
     <%= specification.value %>
   </div>
 
-  <div class="details">
+  <div class="details method_details_list">
     
     <div class="docstring">
       <%= html_markup_rdoc(specification.docstring) %>
     </div>
+
+    <div style="clear: both;"></div>
 
     <!-- Source Code -->
     <div style="float: left;">
       <table class="source_code">
         <tr>
           <td>
-            <pre class="lines"><%= "" %><%= h format_lines(specification) %></pre>
+            <pre class="lines"><%= "\n\n\n" %><%= h format_lines(specification) %></pre>
           </td>
           <td>
-            <pre class="code"><%= "" %><%= html_syntax_highlight specification.source %></pre>
+            <pre class="code"><span class="info file"># File '<%= h specification.file %>'<% if specification.line %>, line <%= specification.line %><% end %></span><%= "\n\n" %><%= html_syntax_highlight specification.source %></pre>
           </td>
         </tr>
       </table>
     </div>
     
-    <!-- Meta Information -->
-    <div class="meta">
-      <div class="file" style="margin-top: 5px;"><%= h specification.file %>:<%= specification.line %></div>
-    </div>
-    
+
     <div style="clear: both;"></div>
     
   </div>
